--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Angular 2 With Webpack</title>
     <base href="/">
-    <link rel="shortcut icon" type="image/png"  href="/src/images/favicon.png">
+    <link rel="shortcut icon" type="image/png"  href="/src/assets/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
