Change app component

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <app>Loading...</app>
+    <st-app>Loading...</st-app>
   </body>
 </html>
