align with viewer-front

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular 2 With Webpack</title>
-    <base href="/">
-    <link rel="shortcut icon" type="image/png"  href="/src/assets/images/favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <st-app>Loading...</st-app>
-  </body>
+   <head>
+      <base href="/">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="shortcut icon" type="image/png"  href="/src/assets/images/favicon.png">
+      <title>Stratio Viewer</title>
+   </head>
+
+   <body>
+      <st-app>Loading...</st-app>
+   </body>
 </html>
