--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="shortcut icon" type="image/png"  href="/src/assets/images/favicon.png">
-      <title>Stratio Viewer</title>
+      <title>Stratio Egeo Starter</title>
    </head>
 
    <body>
