app folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
    </head>
 
    <body>
-      <root-cmp></root-cmp>
+      <st-app>Loading ...</st-app>
    	<script src="polyfills.js"></script>
    	<script src="vendor.js"></script>
 	   <script src="main.js"></script>
